force-app/src/objects/ffr__SummarizationRunInformation__c.object
<CustomObject>
    <description>Holds information about the the last time a summarization template was built.</description>
    <fields>
        <fullName>ffr__EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffr__LastAttemptedInstance__c</fullName>
        <label>Last Attempted Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__LastSuccessfulInstance__c</fullName>
        <label>Last Successful Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__MassDeleteControlRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mass Delete Control Record</label>
        <referenceTo>ffr__MassDeleteControlRecord__c</referenceTo>
        <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
        <relationshipName>MassDeleteControlRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizationTemplate__c</fullName>
        <label>Summarization Template</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>SummarizationRunInformation</relationshipLabel>
        <relationshipName>SummarizationRunInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Summarization Run Information</label>
    <nameField>
        <displayFormat>SRI-{000000}</displayFormat>
        <label>Summarization Run Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summarization Run Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>